--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<html>
-    <head>
-        <title>
-            MBT project
-        </title>
-    </head>
-    <body>
-        <h1>MBT project</h1>
-    </body>
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Hello webpack</title>
+  </head>
+  <body>
+    <input/>
+    <div id="root"></div>
+    <div id="test"></div>
+    <script src="dist/bundle.js"></script>
+  </body>
 </html>
